--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -23,8 +23,8 @@
             </td>
             <td>
                 <%= link_to product_path(product) do %>
-                <% if product.image.present? %>
-                <%= image_tag(product.image.thumb.url, class: "thumbnail") %>
+                <% if product.photos.present? %>
+                <%= image_tag(product.photos[0].avatar.thumb.url, class: "thumbnail") %>
             <% else %>
                 <%= image_tag("https://ww1.sinaimg.cn/large/006y8lValy1fca38ugjwpj305l05kq2p.jpg", class: "thumbnail") %>
                 <% end %>
