--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,7 +1,15 @@
 <div class="row">
     <div class="col-md-6">
         <% if @product.image.present? %>
-        <%= image_tag(@product.image.medium.url, class: "thumbnail") %>
+        <% @photos.each_with_index do |p, index| %>
+        <% if index == 0 %>
+        <%= image_tag p.avatar.medium.url %>
+        <div style="letter-spacing: -8px">
+        <% else %>
+            <%= image_tag p.avatar.thumb.url %>
+            <% end %>
+            <% end %>
+        </div>
     <% else %>
         <%= image_tag("https://ww4.sinaimg.cn/large/006y8lValy1fcgy0yxl0vj305l05lmwx.jpg", class: "thumbnail") %>
         <% end %>
